2000-01-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleConfigureRequest):
	fixed ConfigureRequest handling

1999-12-22  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/style.c (ProcessNewStyle): fixed Style * Button/NoButton
	numbering

2000-01-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (ButtonPosition):
	* fvwm/borders.c (SetupTitleBar):
	fixed number of buttons on windows

	* libs/ColorUtils.c (GetShadowColor):
	(GetHilightColor):
	Use old code for 'medium' colours.

	* fvwm/events.c (HandleFocusIn):
	* fvwm/module_interface.c (send_list_func):
	added hilight colour set to M_FOCUS_CHANGE packet

	* fvwm/events.c (HandleFocusIn):
	fixed hilight colour in M_FOCUS_CHANGE packets

2000-01-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (InitFvwmDecor):
	removed default call to 'WindowFont' in decors

	* fvwm/events.c (HandleEnterNotify):
	Fixed a focus problem with Motif applications and ClickToFocus (#535)

2000-01-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (flush_window_updates):
	fixed similar problem

	* fvwm/builtins.c (do_recapture):
	fixed hang when recapture is called while an icon is focused

	* fvwm/geometry.c (gravity_constrain_size):
	* fvwm/update.c (apply_window_updates):
	changing maxwindowsize style applies to normal_g and max_g too

2000-01-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* sample.fvwmrc/decor_examples:
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	* sample.fvwmrc/system.fvwm2rc-sample-2:
	* sample.fvwmrc/system.fvwm2rc-sample-1:
	* sample.fvwmrc/system.fvwm2rc:
	* sample.fvwmrc/new-features:
	use new styles Font, IconFont and Hilight...

	* fvwm/menus.c (UpdateMenuStyle):
	(NewMenuStyle):
	use new LoadFvwmFont library function instead of I18N_MB ifdef

	* libs/GetFontSet.c:
	removed file (merged with GetFont.c)

	* fvwm/*.c:
	include fvwmlib.h before fvwm.h
	* fvwm/fvwm.h (MyFont):
	struct moved to fvwmlib.h

	* fvwm/window_flags.h:
	* fvwm/focus.c (WarpOn):
	(FocusOn):