@@ -1,3 +1,12 @@
+2000-01-09  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/Colorset.c (SetWindowBackground):
+	(CreateBackgroundPixmap)
+	some changes for FvwmTHeme 'Transparent' option
+
+	* fvwm/events.c (HandleConfigureRequest):
+	removed previous configure request patch
+
 2000-01-07  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (HandleConfigureRequest):
